--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publisher": "maciejdems",
 	"displayName": "Buildbot Connect",
 	"description": "Provide connection with buildbot instance and allow to start manual builds",
-	"version": "0.2.0",
+	"version": "0.3.0",
 	"engines": {
 		"vscode": "^1.47.0"
 	},
@@ -27,7 +27,7 @@
 				},
 				"buildbot.userName": {
 					"type": "string",
-					"description": "If login is requires, specify the username. You will be prompted for password and it will be stored securely."
+					"description": "If login is required, specify the username. You will be prompted for password and it will be stored securely."
 				},
 				"buildbot.allowSelf-signedCertificate": {
 					"type": "boolean",
