Bundle with webpack

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,8 +5,29 @@
 	"tasks": [
 		{
 			"type": "npm",
-			"script": "watch",
-			"problemMatcher": "$tsc-watch",
+			"script": "webpack-dev",
+			"problemMatcher": {
+				"owner": "webpack",
+				"severity": "error",
+				"fileLocation": "absolute",
+				"pattern": [
+					{
+						"regexp": "ERROR in (.*)",
+						"file": 1
+					},
+					{
+						"regexp": "\\((\\d+),(\\d+)\\):(.*)",
+						"line": 1,
+						"column": 2,
+						"message": 3
+					}
+				],
+				"background": {
+					"activeOnStart": true,
+					"beginsPattern": "^Hash: ",
+					"endsPattern": "^Built at: "
+				}
+			},
 			"isBackground": true,
 			"presentation": {
 				"reveal": "never"
