--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,10 +1,12 @@
 .vscode/**
 .vscode-test/**
-out/test/**
+out/**
 src/**
-.gitignore
-vsc-extension-quickstart.md
+node_modules/**
+**/.gitignore
 **/tsconfig.json
 **/.eslintrc.json
 **/*.map
 **/*.ts
+**/webpack.config.js
+vsc-extension-quickstart.md
