--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
 	"publisher": "maciejdems",
 	"displayName": "Buildbot Connect",
 	"description": "Provide connection with buildbot instance and allow to start manual builds",
-	"version": "0.3.0",
+	"version": "0.3.1",
 	"engines": {
 		"vscode": "^1.47.0"
 	},
+	"license": "MIT",
 	"categories": [
 		"Other"
 	],
@@ -16,7 +17,7 @@
 		"url": "https://github.com/macdems/vsode-buildbot-connect.git"
 	},
 	"icon": "images/icon.png",
-	"main": "./out/extension.js",
+	"main": "./dist/extension.js",
 	"contributes": {
 		"configuration": {
 			"title": "Buildbot Connect",
@@ -72,10 +73,11 @@
 		"onCommand:buildbot-connect.stopBuild"
 	],
 	"scripts": {
-		"vscode:prepublish": "npm run compile",
-		"compile": "tsc -p ./",
+		"vscode:prepublish": "webpack --mode production",
+		"webpack": "webpack --mode development",
+		"webpack-dev": "webpack --mode development --watch",
+		"test-compile": "tsc -p ./",
 		"lint": "eslint src --ext ts",
-		"watch": "tsc -watch -p ./",
 		"package": "vsce package",
 		"publish": "vsce publish"
 	},
@@ -88,11 +90,16 @@
 		"@types/vscode": "^1.47.0",
 		"@typescript-eslint/eslint-plugin": "^2.30.0",
 		"@typescript-eslint/parser": "^2.30.0",
+		"@zeit/webpack-asset-relocator-loader": "^0.7.2",
 		"eslint": "^6.8.0",
 		"glob": "^7.1.6",
 		"mocha": "^7.1.2",
+		"native-ext-loader": "^2.3.0",
+		"ts-loader": "^8.0.2",
 		"typescript": "^3.8.3",
-		"vscode-test": "^1.3.0"
+		"vscode-test": "^1.3.0",
+		"webpack": "^4.44.1",
+		"webpack-cli": "^3.3.12"
 	},
 	"dependencies": {
 		"base-64": "^0.1.0",
