--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
 	"tasks": [
 		{
 			"type": "npm",
-			"script": "webpack-dev",
+			"script": "webpack",
 			"problemMatcher": {
 				"owner": "webpack",
 				"severity": "error",
